# jokettt_tbot

./: .gitignore  README.md  environment.yml  joketttbot.py  setup.cfg  setup.py
jokettttbot/: jokettttbot.py
jokettttbot/locale/: jokettttbot.pot
jokettttbot/locale/en_US/LC_MESSAGES/: messages.po
jokettttbot/locale/it_IT/LC_MESSAGES/: messages.po
ldata/: l1000.npz  ldata.npz  strong.npz
