[metadata]
description-file = README.md

[init_catalog]
input_file = jokettttbot/locale/jokettttbot.pot
output_dir = jokettttbot/locale

[extract_messages]
input_dirs = jokettttbot
output_file = jokettttbot/locale/jokettttbot.pot

[compile_catalog]
directory = jokettttbot/locale

[update_catalog]
input_file = jokettttbot/locale/jokettttbot.pot
output_dir = jokettttbot/locale
